--- a/examples/sed/README
+++ b/examples/sed/README
@@ -1,13 +1,13 @@
 To run,
 
-    ../runlinear allfile
+    ../runlinear sed
 
-    ../runconcrete allfile
+    ../runconcrete sed
 
-At this point, the concrete trace will tell us that the last pointer (re_search_2__6__mem_1406) we tried to dereference was pointing to the non-sensical memory address 0x1. Open the trace (allfile_dir/allfile.postconcrete.c) and add the following assertion at the end of the trace.
+At this point, the concrete trace will tell us that the last pointer (re_search_2__6__mem_1406) we tried to dereference was pointing to the non-sensical memory address 0x2a8. Open the trace (sed_dir/sed.postconcrete.c) and add the following assertion at the end of the trace.
 
     assert(re_search_2__6__mem_1406 > 1024);
 
 Next,
 
-    ../runexplain allfile
+    ../runexplain sed
